--- a/hero-editor.html
+++ b/hero-editor.html
@@ -3,64 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hero Manager</title>
+  <title>Heroes Viewer</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hero Viewer and Editor</h1>
-    <div>
-      <label style="display: block;text-align: left" for="heroSelect">Choose a Hero:</label>
-      <select id="heroSelect"></select>
-    </div>
-    <div id="viewMode"></div>
+  <div class="container">
+    <h1>Heroes Viewer</h1>
+    <select id="heroSelect"></select>
+    <div id="viewMode" class="hero-details"></div>
     <button id="editButton">Edit</button>
-  <button id="downloadButton">Download JSON</button>
-  <button id="copyButton">Copy to Clipboard</button>
-    <form id="heroForm" class="hidden">
-      <div class="form-group">
-        <label for="heroName">Name:</label>
-        <input type="text" id="heroName" name="name" required>
-      </div>
-      <div class="form-group">
-        <label for="heroIntro">Introduction:</label>
-        <textarea id="heroIntro" name="intro" rows="3"></textarea>
-      </div>
-      <div class="form-group">
-        <label for="heroAppearance">Appearance Description:</label>
-        <textarea id="heroAppearance" name="appearance" rows="5"></textarea>
-      </div>
-      <div class="form-group">
-        <label for="heroAbilities">Abilities (JSON format):</label>
-        <textarea id="heroAbilities" name="abilities" rows="5"></textarea>
-      </div>
-      <div class="form-group">
-        <label for="heroPersonality">Personality:</label>
-        <textarea id="heroPersonality" name="personality" rows="3"></textarea>
-      </div>
-      <div class="form-group">
-        <label for="heroPhrases">Favorite Phrases (comma-separated):</label>
-        <textarea id="heroPhrases" name="phrases" rows="2"></textarea>
-      </div>
-      <div class="form-group">
-        <label for="heroBackground">Background:</label>
-        <textarea id="heroBackground" name="background" rows="5"></textarea>
-      </div>
-      <div class="form-group">
-        <label for="heroMantra">Mantra:</label>
-        <input type="text" id="heroMantra" name="mantra">
-      </div>
-      <div class="form-group">
-        <label for="heroOutro">Outro:</label>
-        <textarea id="heroOutro" name="outro" rows="3"></textarea>
-      </div>
-      <div class="form-group">
-        <label for="heroImages">Images (JSON format):</label>
-        <textarea id="heroImages" name="images" rows="5"></textarea>
-      </div>
-      <button type="button" id="saveHero">Save Changes</button>
-      <button type="button" id="cancelEdit">Cancel</button>
-    </form>
-    <script src="heroes.js"></script>
-    <script src="script.js"></script>
+    <button id="downloadButton">Download JSON</button>
+    <button id="copyButton">Copy to Clipboard</button>
+  </div>
+
+  <!-- Link to external JavaScript files -->
+  <script src="heroes.js"></script> <!-- Contains the `heroes` JSON object -->
+  <script src="script.js"></script> <!-- Contains all interactive functionality -->
 </body>
 </html>
