--- a/hero-editor.html
+++ b/hero-editor.html
@@ -13,6 +13,7 @@
       <select id="heroSelect"></select>
     </div>    
     <div id="viewMode" class="hero-details"></div>
+    <div id="editMode" class="hidden hero-details"></div>
     <div class="controls">
       <button id="editButton" onclick="toggleEditMode()">Edit</button>
       <button id="copyButton" onclick="copyToClipboard()">Copy JSON</button>
