--- a/hero-editor.html
+++ b/hero-editor.html
@@ -15,7 +15,8 @@
     <div id="viewMode" class="hero-details"></div>
     <div id="editMode" class="hidden hero-details"></div>
     <div class="controls">
-      <button id="editButton" onclick="toggleEditMode()">Edit</button>
+      <button id="editButton">Edit</button>
+      <button id="saveButton">Save</button>
       <button id="copyButton" onclick="copyToClipboard()">Copy JSON</button>
       <button id="downloadButton" onclick="downloadJSON()">Download JSON</button>
     </div>  
