--- a/hero-editor.html
+++ b/hero-editor.html
@@ -15,6 +15,7 @@
     </div>    
     <div id="viewMode" class="hero-details"></div>
     <div id="editMode" class="hidden hero-details"></div>
+    <div id="admincontrols" style="display: none;">
     <div class="controls">
       <button id="editButton">Edit</button>
       <button id="saveButton" class="hidden">Save</button>
@@ -29,6 +30,7 @@
       </div>
       <button id="addNewHeroButton">Add New Hero</button>
       <p id="newHeroError" style="color: red; display: none;">Invalid JSON. Please check your input.</p>
+    </div>
     </div>
   </div>
 
