Begins on Print Layout

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
     </div>
     <div id="heroList"></div>
     <div id="heroContainer" class="hero-details"></div>
+    <button id="printCharacterSheetButton">Print Character Sheet</button>
   </div>
+
+  <div id="characterSheet" class="character-sheet hidden">
+    <!-- Rendered dynamically via JavaScript -->
+  </div>
+
 
   <!-- Link to external JavaScript files -->
   <script src="heroes.js"></script> <!-- Contains the `heroes` JSON object -->
