Worked on Quiz and also fixed Basic Attack

--- a/hero-editor.html
+++ b/hero-editor.html
@@ -49,7 +49,7 @@
   </div>
 
   <!-- Link to external JavaScript files -->
-  <script src="heroes.js"></script> <!-- Contains the `heroes` JSON object -->
+  <script src="https://hero-editor.s3.ap-southeast-2.amazonaws.com/heroes.js"></script> <!-- Contains the `heroes` JSON object -->
   <script src="script.js"></script> <!-- Contains all interactive functionality -->
 </body>
 
